clang/test/BSC/Negative/Generic/StructAndFunction/call_undeclared_generic_function3/call_undeclared_generic_function3.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

void outer() {
    internal_check(); // expected-error {{use of undeclared identifier 'internal_check'}}
    bar<float>();  // expected-error {{use of undeclared identifier 'bar'}}
}

int main() {
  outer();
  return 0;
}